--- a/protostar.toml
+++ b/protostar.toml
@@ -1,8 +1,9 @@
 [project]
 protostar-version = "0.11.0"
 lib-path = "lib"
-linked-libraries = ["starknetid"]
+linked-libraries = ["starknetid", "erc721"]
 
 [contracts]
 starknetid = ["starknetid"]
+erc721 = ["erc721"]
 
